--- a/sites/all/themes/custom/flight_city/sass/layout/_page.sass
+++ b/sites/all/themes/custom/flight_city/sass/layout/_page.sass
@@ -23,7 +23,9 @@ html,body
 .row > .row
   +expand-row(0)
 
-
+//hide lack of left side if none
+[class*="column"] + [class*="column"]:last-child
+  float: left
 
 // *
 // * Media Queries
