--- a/sites/all/themes/custom/flight_city/sass/theme/_teasers.sass
+++ b/sites/all/themes/custom/flight_city/sass/theme/_teasers.sass
@@ -11,10 +11,6 @@
 .node-teaser.node-program
   +nice-teaser-border
 
-  //hide lack of left side if none
-  [class*="column"] + [class*="column"]:last-child
-    float: left
-
   .field-name-title
     a
       +c(link-alt)
